fix(responsive): position reset button on small screens

--- a/styles.css
+++ b/styles.css
@@ -83,5 +83,8 @@ button {
 
 /* Github User: @murselsen */
 @media (max-width: 376px) {
-  .reset
+  .reset {
+    position: absolute;
+    right: 10%;
+  }
 }
